feat: add missing check balance and fetch users endpoints to satisfy requirements and swagger UI testing
